@@ -21,7 +21,7 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_1">
       <item>
-       <widget class="MyTreeView" name="statusBarTreeView">
+       <widget class="MyTableView" name="statusBarTableView">
         <property name="toolTip">
          <string>Double click to check/uncheck</string>
         </property>
@@ -34,13 +34,7 @@
         <property name="alternatingRowColors">
          <bool>true</bool>
         </property>
-        <property name="rootIsDecorated">
-         <bool>false</bool>
-        </property>
-        <property name="itemsExpandable">
-         <bool>false</bool>
-        </property>
-        <property name="expandsOnDoubleClick">
+        <property name="tabKeyNavigation">
          <bool>false</bool>
         </property>
        </widget>
@@ -153,9 +147,9 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>MyTreeView</class>
-   <extends>QTreeView</extends>
-   <header>mytreeview.h</header>
+   <class>MyTableView</class>
+   <extends>QTableView</extends>
+   <header>mytableview.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
